package org.jcjxb.wsn.service;

option java_package = "org.jcjxb.wsn.service.proto";
option java_outer_classname = "DataType";



enum DeployType {
	RANDOM = 0;
	STATIC = 1;
	GRID = 2;
	CIRCLE = 3;
}

message SensorConfig {

}

message SensorNodeDeployConfig {
	optional DeployType deployType = 1;
	optional uint32 nodeNum = 2;
	optional SensorConfig sensorConfig = 3;
}

message SinkNodeDeployConfig {
	optional DeployType deployType = 1;
	optional uint32 nodeNum = 2;
}

message SourceNodeConfig {
	optional DeployType deployType = 1;
}

message DeployConfig {
	optional uint32 width = 1;
	optional uint32 length = 2;
	optional SensorNodeDeployConfig sensorNodeDeployConfig = 3;
}

message Position {
	optional double x = 1;
	optional double y = 2;
}

message PositionList {
	optional DeployType deployType = 1;
	repeated Position postion = 2;
}