package org.jcjxb.wsn.service;

option java_package = "org.jcjxb.wsn.service.proto";
option java_outer_classname = "MasterService";
option java_generic_services = true;

import "BasicDataType.proto";
import "WSNConfig.proto";

message LVTSyncRequest {
	optional int64 localTime = 1;
}

service MService {
	rpc slaveReady(Host) returns (Empty);
	rpc startSimulation(DeployConfig) returns (Empty);
	rpc sync(LVTSyncRequest) returns(Empty);
}
